--- a/src/main/webapp/bezoeker/reizen.xhtml
+++ b/src/main/webapp/bezoeker/reizen.xhtml
@@ -46,11 +46,6 @@
 
                                      <h:form>
                                         <h:selectOneMenu value="#{ReisController.geselecteerdeFilter}">
-                                            <!--<f:selectItem itemLabel="vertrek locatie" itemValue="#{ReisController.getReizenFilterByVertrekLocatie(filtertekst.text)}"/>
-                                            <f:selectItem itemLabel="aankomst locatie" itemValue="#{ReisController.getReizenFilterByAankomstLocatie(filtertekst.text)}"/>
-
-                                            <f:selectItem itemLabel="transport" itemValue="#{ReisController.getReizenFilterByTransportmiddel(filtertekst.text)}"/>
-                                            -->
                                             <f:selectItem itemLabel="Niets geselecteerd" itemValue="0"/>
                                             <f:selectItem itemLabel="vertrek locatie" itemValue="1"/>
                                             <f:selectItem itemLabel="aankomst locatie" itemValue="2"/>
@@ -66,25 +61,7 @@
                                      </h:form>
                                 </div>
                             </div>
-                            <!--<h1 class="my-4">Onze reizen</h1>-->
-                            <!--<div class="list-group">-->
-                                <!--<a href="#" class="list-group-item">Zoeken</a>-->
-                                <!--<a href="#" class="list-group-item">Sorteren</a>-->
-                                <!--<a href="#" class="list-group-item">Filteren</a>-->
-                                <!--<div class="row">-->
-                                    <!--<p>filteren : </p>-->
-                                    <!--<h:inputText name="filtertekst"></h:inputText>-->
-                                    <!--<h:selectOneMenu>-->
-                                        <!--<f:selectItem itemLabel="vertrek locatie" itemValue="#{ReisController.getReizenFilterByVertrekLocatie(filtertekst.text)}"/>-->
-                                        <!--<f:selectItem itemLabel="aankomst locatie" itemValue="#{ReisController.getReizenFilterByAankomstLocatie(filtertekst.text)}"/>-->
-
-                                        <!--<f:selectItem itemLabel="transport" itemValue="#{ReisController.getReizenFilterByTransportmiddel(filtertekst.text)}"/>-->
-                                    <!--</h:selectOneMenu>-->
-                                    <!--<h:commandButton class="btn btn-primary"  value="filteren"/>-->
-                                <!--</div>-->
-                            <!--</div>-->
                         </div>
-                        <!-- /.col-lg-3 -->
 
                         <div class="col-lg-9">
                             <div class="row">
@@ -111,7 +88,7 @@
                                                 <div class="row">
                                                     <span class="col">#{reis.plaatsen} plaatsen over</span>
                                                     <h:form styleClass="col-auto text-right">
-                                                        <h:commandButton class="btn bestelbtn" action="#{GebruikerController.login()}" value="Nu boeken" rendered="#{GebruikerController.getAangemeld() == false}"/>
+                                                        <h:outputLink class="btn bestelbtn" value="/travelmore/bezoeker/login.xhtml" rendered="#{GebruikerController.getAangemeld() == false}">Nu boeken</h:outputLink>
                                                         <h:commandButton class="btn bestelbtn" action="#{BookingController.navigateToBooken(reis.id)}" value="Nu boeken" rendered="#{GebruikerController.getAangemeld() == true}"/>
                                                     </h:form>
                                                 </div>
@@ -122,60 +99,6 @@
                             </div>
                         </div>
                     </div>
-
-
-                <!--<h:form>-->
-                    <!--<h1>Onze reizen : </h1>-->
-
-                    <!--<div class="row">-->
-                        <!--<h:dataTable var="reis" class="table table-striped" value="#{ReisController.reizen}">-->
-                            <!--<h:column>-->
-                                <!--<f:facet name="header">Vertrek Locatie</f:facet>-->
-                                <!--<h:outputText value="#{reis.vertrekLocatie.naam}" />-->
-                            <!--</h:column>-->
-
-                            <!--<h:column>-->
-                                <!--<f:facet name="header">Vertrek Tijd</f:facet>-->
-                                <!--<h:outputText value="#{reis.vertrekTijd}">-->
-                                    <!--<f:convertDateTime pattern="dd-MM-yyyy HH:MM" />-->
-                                <!--</h:outputText>-->
-                            <!--</h:column>-->
-
-                            <!--<h:column>-->
-                                <!--<f:facet name="header">Aankomst Locatie</f:facet>-->
-                                <!--<h:outputText value="#{reis.aankomstLocatie.naam}" />-->
-                            <!--</h:column>-->
-
-                            <!--<h:column>-->
-                                <!--<f:facet name="header">Aankomst Tijd</f:facet>-->
-                                <!--<h:outputText value="#{reis.aankomstTijd}">-->
-                                    <!--<f:convertDateTime pattern="dd-MM-yyyy HH:MM" />-->
-                                <!--</h:outputText>-->
-                            <!--</h:column>-->
-
-
-                            <!--<h:column name="Plaatsen">-->
-                                <!--<f:facet name="header">Plaatsen/al geboekt</f:facet>-->
-                                <!--<h:outputText value="#{reis.plaatsen} / "  />-->
-
-                            <!--</h:column>-->
-
-                            <!--<h:column>-->
-                                <!--<f:facet name="header">prijs/persoon</f:facet>-->
-                                <!--<h:outputText value="#{reis.prijsPerPersoon}" />-->
-                            <!--</h:column>-->
-
-                            <!--<h:column>-->
-                                <!--<f:facet name="header">transportmiddel</f:facet>-->
-                                <!--<h:outputText value="#{reis.transportmiddel}" />-->
-                            <!--</h:column>-->
-
-                            <!--<h:column rendered="#{GebruikerController.getAangemeld()}">-->
-                                <!--<h:commandButton class="btn btn-primary" action="#{BookingController.navigateToBooken(reis.id)}" value="boeken"/>-->
-                            <!--</h:column>-->
-                        <!--</h:dataTable>-->
-                    <!--</div>-->
-                <!--</h:form>-->
             </div>
         </ui:define>
 </ui:composition>
