--- a/src/main/webapp/gebruiker/boekingen.xhtml
+++ b/src/main/webapp/gebruiker/boekingen.xhtml
@@ -17,79 +17,46 @@ xmlns:c="http://java.sun.com/jsp/jstl/core">
         </f:metadata>
         <ui:define name="title">Uw boekingen</ui:define>
         <ui:define name="content">
-            <h:form>
-                <div class="accordion" id="accordionReizen">
-                    <h:form>
-                        <ui:repeat value="#{BookingController.getReizenByUserId(GebruikerController.aangemeldeGebruiker.id)}" var="booking">
-
-                            <div class="card">
-                                <div class="card-header" id="heading#{booking.reis.id}">
-                                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse#{booking.reis.id}" aria-controls="collapse#{booking.reis.id}">
-                                        <div class="row">
-                                            <div class="col-12">
-                                                <h:outputText value="#{booking.reis}" />
-                                            </div>
+            <div class="container-fluid">
+                <!-- Page Content -->
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="row">
+                            <ui:repeat value="#{BookingController.getReizenByUserId(GebruikerController.aangemeldeGebruiker.id)}" var="booking">
+                                <div class="col-xl-3 col-lg-6 col-md-6 mb-4">
+                                    <div class="card h-100">
+                                        <a href="#" class="card-img-top" style="background-image: url(#{booking.reis.foto})"/>
+                                        <div class="card-body">
+                                            <h3 class="card-title row">
+                                                <a class="col reistitle" href="#">#{booking.reis.aankomstLocatie.naam}</a>
+                                                <ui:fragment rendered="#{booking.reis.transportmiddel == 'bus'}">
+                                                    <span class="col-auto reistitle"><i class="fas fa-bus fa-lg fa-fw"></i></span>
+                                                </ui:fragment>
+                                                <ui:fragment rendered="#{booking.reis.transportmiddel == 'vliegtuig'}">
+                                                    <span class="col-auto reistitle"><i class="fas fa-plane fa-lg fa-fw"></i></span>
+                                                </ui:fragment>
+                                            </h3>
+                                            <p class="card-text"><i class="far fa-calendar-alt fa-fw"></i> #{booking.reis.vertrekTijd} - #{booking.reis.aankomstTijd}</p>
+                                            <p class="card-text"><i class="fas fa-plane-departure fa-fw"></i> #{booking.reis.vertrekLocatie.stad} (#{booking.reis.vertrekLocatie.code}) - #{booking.reis.vertrekLocatie.land}</p>
+                                            <p class="card-text"><i class="fas fa-plane-arrival fa-fw"></i> #{booking.reis.aankomstLocatie.stad} (#{booking.reis.aankomstLocatie.code}) - #{booking.reis.aankomstLocatie.land}</p>
                                         </div>
-                                    </button>
-                                </div>
-
-                                <div id="collapse#{booking.reis.id}" class="collapse" aria-labelledby="heading#{booking.reis.id}" data-parent="#accordionReizen">
-                                    <div class="card-body">
-
-                                        <div class="form-group row">
-                                            <label for="vertrekLocatie#{booking.reis.id}" class="col-sm-2 col-form-label">Vertreklocatie</label>
-                                            <div class="col-sm-10">
-                                                <h:inputText value="#{booking.reis.vertrekLocatie}" styleClass="form-control" id="displayVertrekLocatie#{booking.reis.id}" readonly="true"/>
-                                            </div>
-                                        </div>
-
-                                        <div class="form-group row">
-                                            <label for="vertrekTijd#{booking.reis.id}" class="col-sm-2 col-form-label">Vertrektijd</label>
-                                            <div class="col-sm-10">
-                                                <h:inputText value="#{booking.reis.vertrekTijd}" styleClass="form-control" id="displayVertrekTijd#{booking.reis.id}" readonly="true">
-                                                    <f:convertDateTime pattern="dd-MM-yyyy HH:MM" />
-                                                </h:inputText>
-                                            </div>
-                                        </div>
-
-                                        <div class="form-group row">
-                                            <label for="aankomstLocatie#{booking.reis.id}" class="col-sm-2 col-form-label">Aankomstlocatie</label>
-                                            <div class="col-sm-10">
-                                                <h:inputText value="#{booking.reis.aankomstLocatie}" styleClass="form-control" id="displayAankomstLocatie#{booking.reis.id}" readonly="true"/>
-                                            </div>
-                                        </div>
-
-                                        <div class="form-group row">
-                                            <label for="aankomstTijd#{booking.reis.id}" class="col-sm-2 col-form-label">AankomstTijd</label>
-                                            <div class="col-sm-10">
-                                                <h:inputText value="#{booking.reis.aankomstTijd}" styleClass="form-control" id="displayAankomstTijd#{booking.reis.id}" readonly="true">
-                                                    <f:convertDateTime pattern="dd-MM-yyyy HH:MM" />
-                                                </h:inputText>
-                                            </div>
-                                        </div>
-
-                                        <div class="form-group row">
-                                            <label for="transportmiddel#{booking.reis.id}" class="col-sm-2 col-form-label">Transportmiddel</label>
-                                            <div class="col-sm-10">
-                                                <h:inputText value="#{booking.reis.transportmiddel}" styleClass="form-control" id="displayTransportmiddel#{booking.reis.id}" readonly="true"/>
-                                            </div>
-                                        </div>
-                                        <div class="form-group row">
-                                            <label for="betaalt#{booking.reis.id}" class="col-sm-2 col-form-label">Betaalt</label>
-                                            <div class="col-sm-10">
-                                                <h:inputText rendered="#{booking.isBetaald()}" value="OK!" styleClass="form-control" id="displayBetaalt#{booking.reis.id}" readonly="true"/>
-                                                <h:commandButton rendered="#{!booking.isBetaald()}" value="PayPal" action="#{BookingController.betaalReservatie(booking.id)}" class="btn btn-primary  mr-2 float-left"/>
-                                                <h:commandButton rendered="#{!booking.isBetaald()}" value="Bancontact" action="#{BookingController.betaalReservatie(booking.id)}" class="btn btn-primary mr-2 float-left"/>
+                                        <div class="card-footer">
+                                            <div class="row">
+                                                <span class="col"><strong>Totaal Prijs: </strong>#{booking.aantalPersonen} X #{booking.prijsPPTeBetalen} = #{booking.aantalPersonen * booking.prijsPPTeBetalen}</span>
+                                                <h:form styleClass="col-auto text-right">
+                                                    <h:outputLabel rendered="#{booking.isBetaald()}"  id="displayBetaalt#{booking.reis.id}">Betaalt!</h:outputLabel>
+                                                    <h:commandButton rendered="#{!booking.isBetaald()}" value="PayPal" action="#{BookingController.betaalReservatie(booking.id)}" class="btn bestelbtn mr-2 float-left"/>
+                                                    <h:commandButton rendered="#{!booking.isBetaald()}" value="Bancontact" action="#{BookingController.betaalReservatie(booking.id)}" class="btn bestelbtn mr-2 float-left"/>
+                                                </h:form>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-
-                        </ui:repeat>
-                    </h:form>
+                            </ui:repeat>
+                        </div>
+                    </div>
                 </div>
-            </h:form>
+            </div>
         </ui:define>
     </ui:composition>
 </h:body>
